# HanabiSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp  弹幕游戏.xmind
Danmku/: Damnku.c  Damnku.cpp  Hello.c  fly.c  fly.h  judge.h  surface.h  win.h
Danmku/ideas/: image函数.xmind
Danmku/include/: fly.h  judge.h  win.h
Kernal/: kernal.h
Kernel/: Bullet.cpp  Bullet.hpp  DanmakuInterpreter.cpp  DanmakuInterpreter.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  SpellCard.cpp  SpellCard.hpp
Kernel/Danmku/: damnku.c  danmku.h
Kernel/logical/: logic.c  logic.cpp  logical.h  logical.hpp
Omake/: InternalTalk.md  Manual.md  READTHIS.md  TODO.md  TodoList.md  rules.md
Scripts/: spell1.lua  spell2.lua  spell3.lua
Scripts/enemy/: boss1.lua
UI/: Damnku.c  fly.c  fly.h
UI/Window/: window.cpp  window.hpp
UI/entry/: fly.h
UI/include/: surface.h
